--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,12 @@ nav ul li {
   width: 100%;
   height: 100%;
 }
+.card-subtitle {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  color: blueviolet;
+}
+
 
 @media (max-width:425px) {
     .contenedor-images img {
