--- a/css/style.css
+++ b/css/style.css
@@ -51,11 +51,14 @@ nav ul li {
 }
 
 .contenedor-images {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   box-sizing: border-box;
-  display:flex;
+  display: grid;
   margin: 10px auto;
+  align-items: center;
+  grid-template-columns: repeat(3, 1fr) ;
+  grid-template-rows: repeat(3, 1fr);
 
 }
 
@@ -63,12 +66,10 @@ nav ul li {
   width: 100%;
   height: 100%;
 }
-.card-subtitle {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 20px;
-  color: blueviolet;
-}
 
+.bg-carta {
+  background-color: rgb(84, 131, 218);
+}
 
 @media (max-width:425px) {
     .contenedor-images img {
