--- a/css/style.css
+++ b/css/style.css
@@ -140,13 +140,14 @@ nav ul li {
   font-size: 18px;
 }
 
-.contenedor-formulario {
+.card {
   padding-top: 20px;
   margin-left: 50px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
-  align-items: start;
+  align-items: center;
+  background-color: rgb(225, 217, 233);
 }
 
 .contenedor-formulario .contenido-asunto ul li {
@@ -166,8 +167,8 @@ nav ul li {
 }
 
 iframe {
-  width: 100%;
-  height: 100%;
+  width: 30%;
+  height: 30%;
 }
 
 .redes a i {
