--- a/css/style.css
+++ b/css/style.css
@@ -78,11 +78,10 @@ nav ul li {
 }
 
 .profesores {
-  width: 600px;
-  height: 600px;
+  width: 80%;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  text-align: center;
+  flex-direction: row;
   border: 1px solid blueviolet;
   background-color: rgb(216, 169, 153);
   margin: 0 auto;
@@ -90,15 +89,31 @@ nav ul li {
   position: relative;
 }
 
-.profesores img {
-  width: 400px;
-  height: 400px;
+.staff img {
+  width: 90%;
+  height: 90%;
 }
 
-.profesores p {
+.descripcion-taller {
+  width: 50%;
+  height: auto;
+}
+
+.descripcion-taller p { 
+  display: flex;
+  justify-content: left;
+  text-align: justify;
+  position: absolute;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 18px;
 }
+
+@media (max-width: 548px) {
+  .profesores {
+    flex-direction: column;
+  }
+}
+  
 
 .contenedor-cursos {
   width: 100%;
