--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: rgb(241, 240, 174);
+  background-color: rgb(238, 206, 136);
 }
 
 .navbar-expand-lg {
@@ -26,7 +26,7 @@ body {
 .nav-link {
   font-family: Verdana !important;
   font-size: large !important;
-
+  font-weight: lighter;
 }
 
 .navbar-nav a:visited {
@@ -38,7 +38,11 @@ body {
   height: 30%;
 }
 
+.header .redes {
+  display: flex;
+  align-items: end;
 
+}
 .bg-carta {
   background-color: rgba(159, 186, 236, 0.952);
 }
@@ -75,7 +79,7 @@ body {
   padding-right: 20px;
   position: absolute;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 18px;
+  font-size: 23px;
 }
 
 @media (max-width: 548px) {
@@ -97,32 +101,33 @@ body {
 
 }
 
-.contenedor-cursos img{
-  width: 100%;
-  height: 100%;
-  border: 1px black;
-}
-
 .modalidades {
-  width: 600px;
-  height: 600px;
+  width: 80%;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  border: 1px solid blueviolet;
+  flex-direction: row;
+  border: 2px solid black;
   background-color: rgb(216, 169, 153);
   margin: 0 auto;
   margin-top: 20px;
-  position: relative;}
-
-.modalidades img {
-  width: 70%;
-  height: 70%;
+  position: relative;
+}
+.modalidades-img img {
+  padding-top: 40px;
+  padding-left: 20px;
+  width: 90%;
+  height: 90%;
 }
 
-.modalidades p {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 18px;
+.frecuencia p {
+  display: flex;
+  justify-content: left;
+  text-align: justify;
+  padding-top: 40px;
+  padding-right: 20px;
+  position: absolute;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 23px;
 }
 
 .card {
@@ -135,20 +140,12 @@ body {
   background-color: rgb(225, 217, 233);
 }
 
-.contenedor-formulario .contenido-asunto ul li {
-  list-style: none;
-}
-
-.contenedor-formulario .contenido-asunto ul li input, li textarea {
-  width: 400px;
-}
-
-.pie {
-  background-color: rgb(225, 217, 233);
-  box-sizing: border-box;
-  display: flex;
+.div-form {
   width: 100%;
-  height: 20%;
+  display: grid;
+  padding: 50px 10px 50px 10px;
+  box-sizing: border-box;
+  background-color: rgb(225, 217, 233);
 }
 
 iframe {
@@ -156,7 +153,39 @@ iframe {
   height: 30%;
 }
 
-.redes a i {
-  font-size: 25px;
-  text-align: center;
+.footer-container {
+  width: 100%;
+  height: auto;
+  background-image: url(../images/backgroundheader.jpg);
+  background-size: 100%;
+}
+
+.footer-redes {
+  display: flex;
+  justify-content: center;
+  padding-top: 10px;
+}
+
+.footer-redes a img {
+  width: 30px;
+  height: 30px;
+}
+
+.footer-nav {
+  margin: 30px 0;
+}
+
+.footer-nav ul {
+  display: flex;
+  justify-content: center;
+}
+
+.footer-nav ul li a {
+  list-style-type: none;
+  text-decoration: none;
+  margin: 20px;
+  color: black;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: larger;
+  font-weight: lighter;
 }
