--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 
 body {
   background-color: rgb(238, 206, 136);
+  height: 100vh;
 }
 
 .navbar-expand-lg {
@@ -41,11 +42,18 @@ body {
 .header .redes {
   display: flex;
   align-items: end;
-
 }
+
 .bg-carta {
   background-color: rgba(159, 186, 236, 0.952);
 }
+
+.main {
+  height: 100%;
+  min-height: 100vh;
+  position: relative;
+}
+
 
 .profesores {
   width: 80%;
@@ -64,6 +72,7 @@ body {
   padding-left: 20px;
   width: 90%;
   height: 90%;
+  position: relative;
 }
 
 .descripcion-taller {
@@ -82,11 +91,12 @@ body {
   font-size: 23px;
 }
 
-@media (max-width: 548px) {
+@media (max-width: 730px) {
   .profesores {
     flex-direction: column;
   }
 }
+
 
 .modalidades {
   width: 80%;
@@ -99,11 +109,17 @@ body {
   margin-top: 20px;
   position: relative;
 }
+
 .modalidades-img img {
   padding-top: 40px;
   padding-left: 20px;
   width: 90%;
   height: 90%;
+}
+
+.frecuencia {
+  width: 50%;
+  height: auto;
 }
 
 .frecuencia p {
@@ -115,6 +131,14 @@ body {
   position: absolute;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 23px;
+  position: relative;
+}
+
+@media (max-width: 730px) {
+  .modalidades {
+    flex-direction: column;
+    height: 1500px;
+  }
 }
 
 .contenedor-formulario {
@@ -157,19 +181,24 @@ body {
   height: 40%;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 548px) {
   .contenido-form {
     flex-direction: column;
   }
 }
 
+.footer {
+  height: 15vh;
+  background-image: url(../images/backgroundheader.jpg);
+  background-size: 100%;
+  padding-bottom: 0;
+  position: absolute;
+  bottom: 0;
+}
+
 .footer-container {
   width: 100%;
   height: auto;
-  background-image: url(../images/backgroundheader.jpg);
-  background-size: 100%; 
-  position: absolute;
-  margin-bottom: 0;
 }
 
 .footer-redes {
@@ -200,4 +229,14 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: larger;
   font-weight: lighter;
+}
+
+@media (max-width: 548px) {
+  .footer-container ul li  {
+    flex-direction: column;
+  }
+  .footer {
+    margin-top: 20%;
+  }
+ 
 }
