--- a/css/style.css
+++ b/css/style.css
@@ -157,40 +157,6 @@ body {
   }
 }
 
-.contenedor-formulario {
-  width: 800px;
-  margin: 20 auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.contenedor-formulario .contenido-form {
-  width: 100%;
-  height: auto;
-  margin-top: 50px;
-  display: flex;
-  justify-content: center;
-}
-.contenido-form .form-asunto ul li{
-  justify-items: center;
-  list-style-type: none;
-}
-.campo {
-  width: 330px;
-}
-
-.contenedor-formulario h1 {
-  text-align: center;
-}
-
-.ubicacion {
-  display: flex;
-  width: 80%;
-  margin-top: 50px;
-}
-  
 .ubicacion iframe {
   margin-left: 150px;
   width: 80%;
@@ -198,18 +164,18 @@ body {
 }
 
 @media (max-width: 548px) {
-  .contenido-form{
+  .contenido-form {
     display: flex;
     flex-direction: column;
-    text-align: center;
+    justify-content: left;
   }
 }
 
 .footer {
-  height: 20vh;
+  width: 100%;
+  height: auto;
   background-color: grey;
-  background-size: 100%;
-  padding-bottom: 0;
+  margin-top: 0;
   bottom: 0;
 }
 
