--- a/css/style.css
+++ b/css/style.css
@@ -61,11 +61,6 @@ body {
   text-align: center;
 }
 
-.titulo3 {
-  text-align: center;
-  font-family: Verdana;
-  font-size: xx-large;
-}
 .profesores {
   overflow: scroll;
   width: 80%;
@@ -100,15 +95,40 @@ body {
   padding-right: 20px;
   position: absolute;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 20px;
+  font-size: 25px;
+}
+.servicios {
+    overflow: scroll;
+    width: 80%;
+    height: 30%;
+    display: flex;
+    flex-direction: row;
+    border: 2px solid black;
+    background-color: rgba(243, 223, 245, 0.952);
+    margin: 0 auto;
+    margin-top: 80px;
+    position: relative;
 }
 
+.herramientas-materiales p {
+  font-family: Verdana;
+  font-size: 25px;
+  font-weight: lighter;
+  margin-top: 30px;
+}
 @media (max-width: 730px) {
   .profesores {
     flex-direction: column;
   }
 }
-
+@media (max-width: 730px) {
+  .servicios {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 5px;
+  }
+}
 .titulo2 {
   display: flex;
   flex-direction: column;
@@ -152,11 +172,16 @@ body {
 }
 
 .seminarios {
+  overflow: scroll;
+  width: 80%;
+  height: 30%;
   display: flex;
-  flex-direction: column;
-  text-align: left;
-  margin-top: 60px;
-  margin-left: 150px;
+  flex-direction: row;
+  border: 2px solid black;
+  background-color: rgba(243, 223, 245, 0.952);
+  margin: 0 auto;
+  margin-top: 80px;
+  position: relative;
 }
 
 .cursos-cortos p {
@@ -177,9 +202,21 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-top: 5px;
   }
 }
 
+.main-contacto .titulo3 {
+  margin-top: 40px;
+  text-align: center;
+}
+
+.ubicacion iframe {
+  width: 400px;
+  height: 400px;
+  margin-left: 100px;
+  margin-top: 80px;
+}
 .footer {
   width: 100%;
   height: auto;
