--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,20 +14,19 @@
     flex-direction: column;
     height: 20vh;
     width: 100%;
-    background-image: url(../images/backgroundheader.jpg)!important; 
+    background-image: url(../images/backgroundheader.jpg) !important;
     background-size: 100%;
-  
   }
   
   .navbar-nav a:hover {
     background-color: aliceblue;
     box-shadow: 6px 6px 10px black;
-    } 
+  }
   
   .nav-link {
     font-family: Verdana !important;
     font-size: x-large !important;
-    font-weight: light ; 
+    font-weight: light;
   }
   
   .navbar-nav a:visited {
@@ -85,29 +84,30 @@
   .descripcion-taller {
     width: 50%;
     height: auto;
+  
+    p {
+      display: flex;
+      justify-content: left;
+      text-align: justify;
+      padding-top: 40px;
+      padding-right: 20px;
+      position: absolute;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+      font-size: 25px;
+    }
   }
   
-  .descripcion-taller p { 
-    display: flex;
-    justify-content: left;
-    text-align: justify;
-    padding-top: 40px;
-    padding-right: 20px;
-    position: absolute;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 25px;
-  }
   .servicios {
-      overflow: scroll;
-      width: 80%;
-      height: 30%;
-      display: flex;
-      flex-direction: row;
-      border: 2px solid black;
-      background-color: rgba(243, 223, 245, 0.952);
-      margin: 0 auto;
-      margin-top: 80px;
-      position: relative;
+    overflow: scroll;
+    width: 80%;
+    height: 30%;
+    display: flex;
+    flex-direction: row;
+    border: 2px solid black;
+    background-color: rgba(243, 223, 245, 0.952);
+    margin: 0 auto;
+    margin-top: 80px;
+    position: relative;
   }
   
   .herramientas-materiales p {
@@ -116,11 +116,13 @@
     font-weight: lighter;
     margin-top: 30px;
   }
+  
   @media (max-width: 730px) {
     .profesores {
       flex-direction: column;
     }
   }
+  
   @media (max-width: 730px) {
     .servicios {
       display: flex;
@@ -129,6 +131,7 @@
       margin-top: 5px;
     }
   }
+  
   .titulo2 {
     display: flex;
     flex-direction: column;
@@ -158,17 +161,17 @@
   .frecuencia {
     width: 50%;
     height: auto;
-  }
   
-  .frecuencia p {
-    display: flex;
-    justify-content: left;
-    text-align: justify;
-    padding-top: 40px;
-    padding-right: 20px;
-    position: absolute;
-    font-family: Verdana;
-    font-size: 25px;
+    p {
+      display: flex;
+      justify-content: left;
+      text-align: justify;
+      padding-top: 40px;
+      padding-right: 20px;
+      position: absolute;
+      font-family: Verdana;
+      font-size: 25px;
+    }
   }
   
   .seminarios {
@@ -217,6 +220,7 @@
     margin-left: 100px;
     margin-top: 80px;
   }
+  
   .footer {
     width: 100%;
     height: auto;
@@ -253,33 +257,33 @@
     display: flex;
     justify-content: center;
     padding-top: 10px;
-  }
   
-  .footer-redes a img {
-    width: 30px;
-    height: 30px;
+    a img {
+      width: 30px;
+      height: 30px;
+    }
   }
   
   .footer-nav {
     margin: 30px 0;
-  }
   
-  .footer-nav ul {
-    display: flex;
-    justify-content: center;
-  }
+    ul {
+      display: flex;
+      justify-content: center;
   
-  .footer-nav ul li {
-    list-style-type: none;
-    margin: 20px;
-    color: black;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: larger;
-    font-weight: lighter;
-  }
+      li {
+        list-style-type: none;
+        margin: 20px;
+        color: black;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: larger;
+        font-weight: lighter;
   
-  .footer-nav ul li a {
-    text-decoration: none;
+        a {
+          text-decoration: none;
+        }
+      }
+    }
   }
   
   @media (max-width: 548px) {
@@ -289,4 +293,5 @@
       flex-direction: column;
     }
   }
+  
   
