--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,7 @@
+//variables para mis cajas//
+$background-cajas:  rgba(243, 223, 245, 0.952); 
+$bordes-cajas: 2px solid black;
+
 * {
     margin: 0;
     padding: 0;
@@ -5,7 +9,7 @@
   }
   
   body {
-    background-color: rgba(243, 223, 245, 0.952);
+    background-color: $background-cajas;
     height: 100vh;
   }
   
@@ -66,8 +70,8 @@
     height: 100vh;
     display: flex;
     flex-direction: row;
-    border: 2px solid black;
-    background-color: rgba(243, 223, 245, 0.952);
+    border: $bordes-cajas;
+    background-color: $background-cajas;
     margin: auto;
     margin-top: 80px;
     position: relative;
@@ -103,8 +107,8 @@
     height: 30%;
     display: flex;
     flex-direction: row;
-    border: 2px solid black;
-    background-color: rgba(243, 223, 245, 0.952);
+    border: $bordes-cajas;
+    background-color: $background-cajas;
     margin: 0 auto;
     margin-top: 80px;
     position: relative;
@@ -144,8 +148,8 @@
     height: 100vh;
     display: flex;
     flex-direction: row;
-    border: 2px solid black;
-    background-color: rgba(243, 223, 245, 0.952);
+    border: $bordes-cajas;
+    background-color: $background-cajas;
     margin: 0 auto;
     margin-top: 80px;
     position: relative;
@@ -180,8 +184,8 @@
     height: 30%;
     display: flex;
     flex-direction: row;
-    border: 2px solid black;
-    background-color: rgba(243, 223, 245, 0.952);
+    border: $bordes-cajas;
+    background-color: $background-cajas;
     margin: 0 auto;
     margin-top: 80px;
     position: relative;
