--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,8 +1,8 @@
-//variables para mis cajas//
+//VARIABLES//
 $background-cajas:  rgba(243, 223, 245, 0.952); 
 $bordes-cajas: 2px solid black;
 
-//imports//
+//IMPORTS//
 //import reseteo css//
 @import "reseteo-css";
 //import footer//
